--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,11 +1,9 @@
 <resources>
 
-    <string name="app_name">"safe HOME"</string>
+    <string name="app_name">"Don't Go Die"</string>
     <string name="userStateGreen">"매우 활동적"</string>
     <string name="userStateRed">"매우 위험한"</string>
-    <string name="userStateOrange">"위험한"</string>
-    <string name="userStateOutdoor">"외출중"</string>
-
-    <string name="userLocationStateInside">"실내"</string>
-    <string name="userLocationStateOutside">"외출"</string>
+    <string name="userLocationStateInside">"실내에 있는 중"</string>
+    <string name="userLocationStateOutside">"외출 중"</string>
 </resources>
+
