--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="userStateGreen">"매우 활동적"</string>
     <string name="userStateM">"움직임X"</string>
     <string name="userStateTH">"온습도 이상"</string>
-    <string name="userStateMTH">"움직임X,온습도ㅜ"</string>
-    <string name="userLocationStateInside">"실내에 있는 중"</string>
-    <string name="userLocationStateOutside">"외출 중"</string>
+    <string name="userStateMTH">"움직임X, 온습도 이상"</string>
+    <string name="userLocationStateInside">"[ 실내 ]"</string>
+    <string name="userLocationStateOutside">"[ 외부 ]"</string>
 </resources>
 
